--- a/main/templates/main/customer/inprocessorder.html
+++ b/main/templates/main/customer/inprocessorder.html
@@ -31,15 +31,6 @@
 				<div class="table-responsive">
 					<table id="example" class="table">
 						<thead>
-							<!-- <tr>
-								<th>Order No.</th>
-								<th>Image</th>
-								<th>Foods</th>
-								<th>Quantity</th>
-								<th>Order Mode</th>
-								<th>Status</th>
-								<th class="text-center">Action</th>
-							</tr> -->
 							<tr>
 								<th>Order No.</th>
 								<th>Order Mode</th>
@@ -55,7 +46,7 @@
 								<td class="text-info">In-Process</td>
 								<td>200</td>
 								<td class="text-center">
-									<a class="btn btn-sm btn-info" href="{% url 'customer_orderlist' %}">
+									<a class="btn btn-sm btn-info" href="">
 										<i data-feather="eye"></i>
 									</a>
 								</td>
