--- a/main/templates/main/customer/orderhistory.html
+++ b/main/templates/main/customer/orderhistory.html
@@ -37,7 +37,7 @@
                             <td class="text-success">Completed</td>
                             <td>200</td>
                             <td class="text-center">
-                                <a class="btn btn-sm btn-info" href="{% url 'customer_orderlist' %}">
+                                <a class="btn btn-sm btn-info" href="">
                                     <i data-feather="eye"></i>
                                 </a>
                             </td>
@@ -48,7 +48,7 @@
                             <td class="text-secondary">Cancelled</td>
                             <td>200</td>
                             <td class="text-center">
-                                <a class="btn btn-sm btn-info" href="{% url 'customer_orderlist' %}">
+                                <a class="btn btn-sm btn-info" href="">
                                     <i data-feather="eye"></i>
                                 </a>
                             </td>
