--- a/main/static/css/viewproduct.css
+++ b/main/static/css/viewproduct.css
@@ -5,13 +5,14 @@
     justify-content: space-between;
 }
 .seller .product-image {
-    width: 450px;
-    height: 470px;
+    width: 350px;
+    height: 370px;
     margin-right: 10px;
 }
 .seller .product-image img {
-    height: 450px;
-    width: 450px;
+    border-radius: 10px;
+    height: 350px;
+    width: 350px;
 }
 .seller .product-image .price {
     display: flex;
