--- a/main/templates/main/admin/orderpending.html
+++ b/main/templates/main/admin/orderpending.html
@@ -36,51 +36,51 @@ List of Pending Order
                 <table id="example" class="table">
                     <thead>
                         <tr>
-                            <th>Customer</th>
+                            <th>Date Ordered</th>
                             <th>Order No.</th>
                             <th>Image</th>
-                            <th>Foods</th>
-                            <th>Quantity</th>
+                            <th>Customer</th>
                             <th>Order Mode</th>
                             <th>Status</th>
+                            <th>Total Amount</th>
                             <th class="text-center">Action</th>
                         </tr>
                     </thead>
-                    {% for order in orders %}
                     <tbody>
                         <tr>
-                            <td>{{ order.user.first_name | title }} {{ order.user.last_name | title }}</td>
-                            <td>{{ order.id }}</td>
+                            <td>2023-09-28</td>
+                            <td>36215</td>
                             <td>
-                                <a href="{{ order.product.image.url }}">
-                                    <img width="50" src="{{ order.product.image.url }}" alt="vehicle">
+                                <a href="{% static 'img/no-profile.png' %}">
+                                    <img width="50" src="{% static 'img/no-profile.png' %}" alt="vehicle">
                                 </a>
                             </td>
-                            <td>{{ order.product.name }}</td>
-                            <td>{{ order.quantity }}</td>
-                            <td>{{ order.order_mode }}</td>
-                            <td class="text-danger">{{ order.status }}</td>
+                            <td>Customer Nname</td>
+                            <td>Customer Nname</td>
+                            <td>Dine-In</td>
+                            <td class="text-danger">Pending</td>
+                            <td>1000</td>
                             <td class="text-center">
                                 <a class="btn btn-sm btn-success text-white" data-bs-toggle="modal" id=""
-                                   data-bs-target="#appModal{{ order.id }}">
+                                   data-bs-target="#appModal">
                                     <i data-feather="check"></i>
                                 </a>
 
-                                <a class="btn btn-sm btn-info text-white" data-bs-toggle="modal" id=""
-                                   data-bs-target="#viewModal">
+                                <a class="btn btn-sm btn-info text-white" href="{% url 'admin_customer_orderlist' %}">
                                     <i data-feather="eye"></i>
                                 </a>
 
                                 <a class="btn btn-sm btn-danger text-white" type="button" data-bs-toggle="modal" id=""
-                                   data-bs-target="#caModal{{ order.id }}">
+                                   data-bs-target="#caModal">
                                     <i data-feather="delete"></i>
                                 </a>
 
                             </td>
                         </tr>
                     </tbody>
+
                     <!-- Confirm Modal -->
-                    <div class="modal fade" id="appModal{{ order.id }}">
+                    <div class="modal fade" id="appModal">
                         <div class="modal-dialog">
                             <div class="modal-content">
                                 <form action="" method="post" id="app_frm">
@@ -95,7 +95,7 @@ List of Pending Order
                                     </div>
                                     <div class="modal-footer float-end">
                                         <a type="submit" class="btn btn-dark"
-                                           href="{% url 'admin_toProcess_order' order.id %}">Yes</a>
+                                           href="">Yes</a>
                                         <a class="btn btn-cancel" data-bs-dismiss="modal" aria-label="Close">Cancel</a>
                                     </div>
                                 </form>
@@ -103,10 +103,10 @@ List of Pending Order
                         </div>
                     </div>
                     <!-- Delete Modal -->
-                    <div class="modal fade" id="caModal{{order.id}}">
+                    <div class="modal fade" id="caModal">
                         <div class="modal-dialog">
                             <div class="modal-content">
-                                <form action="{% url 'admin_toCancel_order' order.id %}" method="POST" id="ca_frm">
+                                <form action="" method="POST" id="ca_frm">
                                     {% csrf_token %}
                                     <div class="modal-header">
                                         <h5 class="modal-title" id="exampleModalLabel">Canceling...?</h5>
@@ -127,7 +127,7 @@ List of Pending Order
                             </div>
                         </div>
                     </div>
-                    {% endfor %}
+                    
                 </table>
             </div>
         </div>
