--- a/main/templates/main/customer/completedorder.html
+++ b/main/templates/main/customer/completedorder.html
@@ -109,7 +109,7 @@
 								<td class="text-success">Completed</td>
 								<td>200</td>
 								<td class="text-center">
-									<a class="btn btn-sm btn-info" href="{% url 'customer_orderlist' %}">
+									<a class="btn btn-sm btn-info" href="">
 										<i data-feather="eye"></i>
 									</a>
 									<a class="btn btn-sm btn-warning" type="button" data-bs-toggle="modal" id=""
