--- a/main/templates/main/admin/feedbacklist.html
+++ b/main/templates/main/admin/feedbacklist.html
@@ -42,7 +42,7 @@ List of Food
                         <tr>
                             <td>
                                 <a href="{{ feedback.order.product.image.url }}">
-                                    <img width="50" src="{{ feedback.order.product.image.url }}" alt="vehicle">
+                                    <img width="50" src="{{ feedback.order.product.image.url }}" >
                                 </a>
                             </td>
                             <td>
