--- a/main/templates/main/admin/foodlist.html
+++ b/main/templates/main/admin/foodlist.html
@@ -52,7 +52,7 @@ List of Food
                         <tr>
                             <td>
                                 <a href="{{ f.image.url }}">
-                                    <img width="50" src="{{ f.image.url }}" alt="vehicle">
+                                    <img width="50" src="{{ f.image.url }}" >
                                 </a>
                             </td>
                             <td>{{ f.name }}</td>
