--- a/main/templates/main/admin/index.html
+++ b/main/templates/main/admin/index.html
@@ -107,7 +107,7 @@ Dashboard
                             <td>{{ order.id}}</td>
                             <td>
                                 <a href="{{ order.product.image.url }}">
-                                    <img width="50" src="{{ order.product.image.url }}" alt="vehicle">
+                                    <img width="50" src="{{ order.product.image.url }}" >
                                 </a>
                             </td>
                             <td>{{ order.product.name }}</td>
