--- a/main/templates/main/admin/orderinprocess.html
+++ b/main/templates/main/admin/orderinprocess.html
@@ -52,7 +52,7 @@ List of Inprocess Order
                             <td>36215</td>
                             <td>
                                 <a href="{% static 'img/no-profile.png' %}">
-                                    <img width="50" src="{% static 'img/no-profile.png' %}" alt="vehicle">
+                                    <img width="50" src="{% static 'img/no-profile.png' %}" >
                                 </a>
                             </td>
                             <td>Customer Nname</td>
