--- a/main/templates/main/admin/viewitemlist.html
+++ b/main/templates/main/admin/viewitemlist.html
@@ -38,7 +38,7 @@ View Customer's Order
                             <td>1</td>
                             <td>
                                 <a href="{% static 'img/dish.png' %}">
-                                    <img width="50" src="{% static 'img/dish.png' %}" alt="vehicle">
+                                    <img width="50" src="{% static 'img/dish.png' %}" >
                                 </a>
                             </td>
                             <td>Food 1</td>
