--- a/main/templates/main/customer/completedorder.html
+++ b/main/templates/main/customer/completedorder.html
@@ -109,56 +109,12 @@
 								<td class="text-success">Completed</td>
 								<td>200</td>
 								<td class="text-center">
-									<a class="btn btn-sm btn-info" href="">
+									<a class="btn btn-sm btn-info" href="{% url 'customer_view_rate_order' %}">
 										<i data-feather="eye"></i>
-									</a>
-									<a class="btn btn-sm btn-warning" type="button" data-bs-toggle="modal" id=""
-									data-bs-target="#rateModal">
-										<i data-feather="thumbs-up"></i>
 									</a>
 								</td>
 							</tr>
 						</tbody>
-
-						<!-- Cancel Modal -->
-						<div class="modal fade" id="rateModal">
-							<div class="modal-dialog">
-								<div class="modal-content">
-									<form action="" method="POST" id="ca_frm">
-										{% csrf_token %}
-										<div class="modal-header">
-											<h5 class="modal-title" id="exampleModalLabel">FeedBack</h5>
-											<button type="button" class="btn-close" data-bs-dismiss="modal"
-													aria-label="Close"></button>
-										</div>
-										<div class="modal-body">
-											<label for="message">Feedback:</label> <br>
-											<textarea class="form-control" name="message" id="message" cols="55" rows="7"></textarea>
-											<br>
-											<p>Rating:</p>
-											<div class="rate">
-												<input type="radio" id="star1" name="rate1" value="5" />
-												<label for="star1" title="text">1 stars</label>
-												<input type="radio" id="star2" name="rate2" value="4" />
-												<label for="star2" title="text">2 stars</label>
-												<input type="radio" id="star3" name="rate3" value="3" />
-												<label for="star3" title="text">3 stars</label>
-												<input type="radio" id="star4" name="rate4" value="2" />
-												<label for="star4" title="text">4 stars</label>
-												<input type="radio" id="star5" name="rate5" value="1" />
-												<label for="star5" title="text">5 star</label>
-											</div>
-										</div>
-										<div class="modal-footer float-end">
-											<button type="submit" class="btn btn-dark">Submit</button>
-											<a class="btn btn-cancel" data-bs-dismiss="modal"
-											   aria-label="Close">Cancel</a>
-										</div>
-									</form>
-								</div>
-							</div>
-						</div>
-
 					</table>
 				</div>
 			</div>
